# service-watcher

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
config/: services.yaml
src/service_watcher/: checker.py  config.py  main.py  reporter.py  storage.py
tests/: test_checker.py
